fix(client): removed useless text align

--- a/client/src/shared/styles/abstracts/_variables.sass
+++ b/client/src/shared/styles/abstracts/_variables.sass
@@ -14,7 +14,7 @@ $secondary-bg: rgb(35, 40, 45)
 
 // Colors - Actions
 $primary-cta: rgb(134, 103, 248)
-$primary-cta-hover: rgb(103, 82, 214)
+$primary-cta-hover: #6752d6
 
 // Spacing scale
 $spacing-xs: 4px
